﻿shmuel 28.10.2015 19:12:06 +0200 - build 4450

1. Мелкий рефакторинг в макросистеме.

w17 27.10.2015 19:36:48 +0300 - build 4449

1. Продолжение 4448. Не падаем в обработчике STACK_OVERFLOW, minidump покажет корректное место переполнения стека.

w17 27.10.2015 17:39:42 +0300 - build 4448

1. Experimental: Кнопка записи минидампа (%FARPROFILE%\Far.mdmp) при обработке SEHException.

drkns 27.10.2015 01:26:44 +0200 - build 4447

1. 0003026: FindFiles access violation exception

drkns 26.10.2015 09:25:44 +0200 - build 4446

1. Формат статусной стоки вынесен в lng.

drkns 24.10.2015 11:59:47 +0200 - build 4445

1. 0003053: Раскраска файлов с >1 хардлинком замедляет панели на сетевых дисках
   Добавлена проверка имени FS для тех ОС, которые не умеют FILE_SUPPORTS_HARD_LINKS.

drkns 24.10.2015 02:29:09 +0200 - build 4444

1. 0002520: Неправильный текст системной ошибки

2. 0003089: Мелкая правка в панели информации (Ctrl+L) (частично).

drkns 24.10.2015 01:21:54 +0200 - build 4443

1. Немного переименований для исправления предупреждений VS2015.

drkns 24.10.2015 00:04:08 +0200 - build 4442

1. С форума: показываем число папок в текущей панели.

2. Warnings.

w17 20.10.2015 16:21:53 +0300 - build 4441

1. M#3100: Crash on search in invalid ZIP archive
   Симптоматическое лечение.

svs 19.10.2015 10:31:45 +0300 - build 4440

1. SQLite 3.9.1

drkns 18.10.2015 13:18:18 +0200 - build 4439

1. В редакторе некорректно обрабатывались переводы строк для кодовых страниц, где они отличны от 0x0d / 0x0a (EBCDIC etc.)

drkns 17.10.2015 14:35:10 +0200 - build 4438

1. Рефакторинг.

svs 16.10.2015 12:33:02 +0300 - build 4437

1. Mantis#0003062: FSF.CopyToClipboard+FCT_COLUMN рассинхронизирует буфер обмена
   Для FCT_STREAM юзается SetClipboard, которая самостоятельно очищает буфер.
   Для FCT_COLUMN юзается SetClipboardFormat(FCF_VERTICALBLOCK_UNICODE), которая не очищает буфер, а добавляет туда данные. Соответственно OEM остается нетронутым.

   <АХТУНГ!>