@@ -1,4 +1,8 @@
-﻿shmuel 28.10.2015 19:12:06 +0200 - build 4450
+﻿drkns 31.10.2015 13:07:10 +0200 - build 4451
+
+1. 0003077: Exception при поиске в альтернативных потоках
+
+shmuel 28.10.2015 19:12:06 +0200 - build 4450
 
 1. Мелкий рефакторинг в макросистеме.
 
